--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "chainlit>=2.5.5",
+    "langchain>=0.3.25",
+    "langchain-community>=0.3.24",
+    "langchain-openai>=0.3.19",
+    "langchain-qdrant>=0.2.0",
+    "python-docx>=1.1.2",
+    "unstructured>=0.17.2",
 ]
 
 [dependency-groups]
@@ -22,7 +28,7 @@ include = [
 ]
 
 [tool.ruff]
-line-length = 88
+line-length = 120
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "ASYNC", "UP"]
