--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-community>=0.3.24",
     "langchain-openai>=0.3.19",
     "langchain-qdrant>=0.2.0",
+    "pydantic-settings",
     "python-docx>=1.1.2",
     "unstructured>=0.17.2",
 ]
@@ -18,6 +19,7 @@ dependencies = [
 dev = [
     "pyright>=1.1.401",
     "pytest>=8.3.5",
+    "rich>=14.0.0",
     "ruff>=0.11.8",
 ]
 
