--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,6 @@ DIMENSIONS=3072
 
 # Langsmith: for tracing llm requests, optional
 LANGSMITH_API_KEY=""
-LANGSMITH_TRACING="false" # set to true to enable tracing
+LANGSMITH_TRACING=False # set to True to enable tracing
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_PROJECT="yijian-zhi-chatbot"
