support setting host and port via .env file

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ LANGSMITH_API_KEY=""
 LANGSMITH_TRACING=False # set to True to enable tracing
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
 LANGSMITH_PROJECT="yijian-zhi-chatbot"
+
+# Server: settings for deployment
+HOST=0.0.0.0
+PORT=8030
